<resources>
    <string name="app_name">ecoE</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_manage">Manage</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_text">Welcome</string>
    <string name="defaultDouble">loading...</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="show_data_for">Show data for:</string>
    <string name="sign_up">Sign up</string>
    <string name="_2021_ecoe">© 2021 ecoE</string>
    <string name="to_get_access_to_your_terrarium_you_will_have_to_enter_your_ecoe_account_first">To get access to your terrarium, you will have to enter your ecoE account first.</string>
    <string name="don_t_have_an_ecoe_account">Don\'t have an ecoE account?</string>
    <string name="log_in_to_ecoe">Log in to ecoE</string>
    <string name="carbon_dioxide">Carbon Dioxide</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="send_email">Send email</string>
    <string name="app_info">App info</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="current_user">Current user</string>
    <string name="loading">loading...</string>
    <string name="user">User</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="current_profile">Current profile</string>
    <string name="share_app">Share app</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="sign_up_for_ecoe">Sign up for ecoE</string>
    <string name="already_have_an_ecoe_account">Already have an ecoE account?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="ex_profile_1">ex. Profile 1</string>
    <string name="name">Name</string>
    <string name="please_input_the_desired_limit_values_all_measurements_are_in_c_celsius">Please input the desired limit values. All measurements are in °C (Celsius).</string>
    <string name="action_and_time_parameters_are_not_mandatory">Action and time parameters are not mandatory.</string>
    <string name="ex_toggle_the_vent">ex. toggle the vent</string>
    <string name="toggle_light">Toggle light</string>
    <string name="toggle_vent">Toggle vent</string>
    <string name="date_and_time">Date and time</string>
    <string name="below_you_can_find_the_chosen_boundaries_for_the_selected_profile_to_change_them_go_back_and_press_the_edit_button">Below, you can find the chosen boundaries for the selected profile. To change them, go back and press the edit button</string>
    <string name="manage">Manage</string>
    <string name="light_status">Light status:</string>
    <string name="vent_status">Vent status:</string>
    <string name="monitor">Monitor</string>
    <string name="tasks">Tasks</string>
    <string name="empty">Empty</string>
    <string name="task">Task:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="lightt">Light:</string>
    <string name="vent">Vent:</string>
    <string name="temperature">Temperature</string>
</resources>