<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_monitor">

    <fragment
        android:id="@+id/navigation_monitor"
        android:name="com.example.androidapp.ui.monitor.MonitorFragment"
        android:label="@string/title_monitor"
        tools:layout="@layout/fragment_monitor" />

    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.example.androidapp.ui.manage.ManageFragment"
        android:label="@string/title_manage"
        tools:layout="@layout/fragment_monitor" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.androidapp.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />
</navigation>